--- a/register.html
+++ b/register.html
@@ -23,6 +23,10 @@
   padding-top: 5px;
   padding-bottom: 5px;
 }
+
+.note li {
+  font-size: 14px;
+}
 </style>
 </head>
 <body dir="rtl" style="background-color:#FFFEDB;">
@@ -88,8 +92,16 @@ document.getElementById('instructionsButton').addEventListener('click', function
       <li>הדביקו את התוכן בהודעת המייל</li>
       <li>שלחו לחבריכם</li><br>
     </ol>
-	<b>שימו לב:על כל אדם נוסף שנכנס לאתר דרככם, תכנסו להגרלה פעם נוספת!</b>
+	<b>שימו לב:על כל אדם נוסף שיכנס לאתר דרככם, תכנסו להגרלה פעם נוספת!</b>
   </div>
+  <hr style="margin: 10px">
+	<ol class="note" style="list-style-type: none;">
+	  <li>מספר הבהרות חשובות:</li>
+	  <li>א. ההגרלה תיערך בט"ז חשון תשפ"ד, על ידי הבעלים של האתר. הודעה תימסר לזוכה במייל.</li>
+	  <li>ב. על כל משתמש נוסף שיכנס דרך הקישור האישי שלכם, תיכנסו להגרלה פעם נוספת. אך הדבר מותנה ברישום של המשתמש בכניסה לאתר.</li>
+	  <li>ג. הרישום הוא רק עבור משתמשים חדשים. לא ניתן להירשם פעמיים. (כלומר, אם החבר כבר נרשם דרך מישהו אחר, לא תכנסו להגרלה פעם נוספת)</li>
+	</ol>  
+	</p>
   <a class="confirm-button" href="https://nhlocal.github.io/shir-bot/">אישור וסיום</a>
   `;
 
