--- a/register.html
+++ b/register.html
@@ -25,7 +25,7 @@
 }
 
 .note li {
-  font-size: 14px;
+  font-size: 13px;
 }
 </style>
 </head>
@@ -88,6 +88,8 @@ document.getElementById('instructionsButton').addEventListener('click', function
 	<p>במספר צעדים פשוטים</p>
     <ol style="list-style-type: none;">
       <li><a class="refined" href="https://mail.google.com/mail/u/0/?view=cm&fs=1&tf=1&source=mailto&su=%E2%9C%A8+%D7%A8%D7%95%D7%A6%D7%99%D7%9D+%D7%9C%D7%94%D7%95%D7%A8%D7%99%D7%93+%D7%A9%D7%99%D7%A8%D7%99%D7%9D+%D7%91%D7%90%D7%95%D7%A4%D7%9F+%D7%97%D7%95%D7%A4%D7%A9%D7%99+%D7%91%D7%AA%D7%95%D7%9A+%D7%9E%D7%90%D7%92%D7%A8+%D7%A9%D7%9C+70%2C000+%D7%A9%D7%99%D7%A8%D7%99%D7%9D%3F+%D7%9B%D7%93%D7%90%D7%99+%D7%A9%D7%AA%D7%A6%D7%99%D7%A6%D7%95+%D7%A8%D7%92%D7%A2...&to=" target="_blank">לחצו כאן</a> לפתיחת הודעת מייל באופן אוטומטי</li>
+	  <li>הכניסו כאן את כתובת המייל שלכם: <input type="text" id="usermail" size="10" />
+</li>
       <li><a class="refined" onclick="copyFormattedText()">לחצו כאן</a> להעתקת הודעה מוכנה ללוח</li>
       <li>הדביקו את התוכן בהודעת המייל</li>
       <li>שלחו לחבריכם</li><br>
@@ -115,6 +117,13 @@ document.getElementById('instructionsButton').addEventListener('click', function
 
 
 function copyFormattedText() {
+
+  // Get a reference to the input element by its id
+  var inputElement = document.getElementById('usermail');
+
+  // Get the value from the input element
+  var userMail = inputElement.value;
+ 
   // Define the HTML content you want to copy
   var htmlContent = `
 <center id="instructions">
@@ -125,7 +134,7 @@ function copyFormattedText() {
   <p><b>♪</b> זה יוביל אותך להודעת מייל, שלח אותה</p>
   <p><b>♪</b> תוך כדקה, ישלח אליך השיר המבוקש</p>
   <p class="disclaimer">שים לב שבמערכת זו ניתן להוריד סינגלים בלבד!</p>
-  
+  ${userMail}
   <button class="helpButton" id="helpButton">לחץ כאן לקבלת עזרה מפורטת</button>
 </div>
 </center>
