--- a/register.html
+++ b/register.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <title>Dynamic Ad IFrame</title>
+    <title>רישום וכניסה</title>
     <link rel="stylesheet" href="site/styles.css">
     <link rel="stylesheet" href="site/personal.css">
 	<script src="site/messages.js"></script>
@@ -30,9 +30,7 @@
 </style>
 </head>
 <body dir="rtl" style="background-color:#FFFEDB;">
-  <!-- This is where the ad iframe will be displayed -->
 
-  <!-- Your JavaScript code to create and append the iframe goes here -->
   <script>
 const urlParams = new URLSearchParams(window.location.search);
 const mailValue = urlParams.get('sourcemail');
@@ -58,7 +56,7 @@ document.addEventListener("DOMContentLoaded", function() {
  <div class="refined">
     <h2>הרשמה מהירה</h2>
 	<p>כדי שאתה וחברך תכנסו להגרלה, יש להירשם כעת</p>
-    <iframe src="${iframeSrc}" width="400" height="400" frameborder="0" marginheight="0" marginwidth="0"></iframe>
+    <iframe src="${iframeSrc}" width="400" height="400" frameborder="0" marginheight="0" marginwidth="0">טוען...</iframe>
 
 	<p>מעוניין להגדיל את סיכויי הזכייה שלך פי 100?<a style="" id="instructionsButton">לחץ כאן כעת להוראות נוספות</a></p>
     <br>
@@ -88,7 +86,7 @@ document.getElementById('instructionsButton').addEventListener('click', function
 	<p>במספר צעדים פשוטים</p>
     <ol style="list-style-type: none;">
       <li><a class="refined" href="https://mail.google.com/mail/u/0/?view=cm&fs=1&tf=1&source=mailto&su=%E2%9C%A8+%D7%A8%D7%95%D7%A6%D7%99%D7%9D+%D7%9C%D7%94%D7%95%D7%A8%D7%99%D7%93+%D7%A9%D7%99%D7%A8%D7%99%D7%9D+%D7%91%D7%90%D7%95%D7%A4%D7%9F+%D7%97%D7%95%D7%A4%D7%A9%D7%99+%D7%91%D7%AA%D7%95%D7%9A+%D7%9E%D7%90%D7%92%D7%A8+%D7%A9%D7%9C+70%2C000+%D7%A9%D7%99%D7%A8%D7%99%D7%9D%3F+%D7%9B%D7%93%D7%90%D7%99+%D7%A9%D7%AA%D7%A6%D7%99%D7%A6%D7%95+%D7%A8%D7%92%D7%A2...&to=" target="_blank">לחצו כאן</a> לפתיחת הודעת מייל באופן אוטומטי</li>
-	  <li>הכניסו כאן את כתובת המייל שלכם: <input dir="ltr" type="text" id="usermail" size="20" />
+	  <li>הכניסו כאן את כתובת המייל שלכם: <input dir="ltr" type="email" id="usermail" size="20" />
 	  <p style="font-size: 12px; padding: 0px; margin: 0px">*הכנסת מייל תקין היא הכרחית כדי שנוכל להכניס אתכם להגרלה!</p></li>
       <li><a class="refined" onclick="copyFormattedText()">לחצו כאן</a> להעתקת הודעה מוכנה ללוח</li>
       <li>הדביקו את התוכן בהודעת המייל</li>
@@ -113,9 +111,6 @@ document.getElementById('instructionsButton').addEventListener('click', function
 
 });
 
-
-
-
 function copyFormattedText() {
 
   // Get a reference to the input element by its id
@@ -132,17 +127,57 @@ function copyFormattedText() {
  
   // Define the HTML content you want to copy
   var htmlContent = `
-<center id="instructions">
-<div class="instructions-container">
-  <h3>הוראות שימוש</h3>
-  <p><b>♪</b> חפש שיר באופן חופשי</p>
-  <p><b>♪</b> לחץ על המספר הסידורי של השיר</p>
-  <p><b>♪</b> זה יוביל אותך להודעת מייל, שלח אותה</p>
-  <p><b>♪</b> תוך כדקה, ישלח אליך השיר המבוקש</p>
-  <p class="disclaimer">שים לב שבמערכת זו ניתן להוריד סינגלים בלבד!</p>
-  <button class="helpButton" id="helpButton">  <a href="https://nhlocal.github.io/shir-bot/register?sourcemail=${userMail}">לחצו כאן למעבר לאתר</a></button>
-</div>
-</center>
+<!DOCTYPE html>
+<html lang="he">
+<head>
+    <meta charset="UTF-8">
+</head>
+<body style="background-color: #ffffcc; direction: rtl;">
+    <table role="presentation" cellspacing="0" cellpadding="0" border="0" width="100%" style="width: 1000px; margin: auto;">
+        <tr>
+            <td>
+                <table role="presentation" align="center" cellspacing="0" cellpadding="0" border="0" width="100%" style="background-color: #fff; max-width: 700px; margin: auto; border-radius: 5px; box-shadow: 0 2px 5px rgba(0, 0, 0, 0.2);">
+                    <tr>
+                        <td style="text-align: center;">
+                            <img src="https://nhlocal.github.io/shir-bot/help/title.png" alt="תמונת האתר" width="700" style="display: block; margin: 0 auto; max-width: 100%; border: 5px;">
+                            <h1 style="color: #362266;">שיר-בוט - אתר שירים חסידיים ומזרחיים</h1>
+                            <br>
+                            <p style="font-size: 18px; line-height: 1.6; color: #555;">
+                                יום טוב, יש לנו המלצה עבורכם!
+                            </p>
+                            <p style="font-size: 18px; line-height: 1.6; color: #555;">
+                                התכוננו לצלול לעולם המוזיקה כמו שלא היה מעולם עם שיר-בוט. אנחנו היעד האחד שלכם לאוסף מדהים של למעלה מ-70,000 שירים המכסים מגוון רחב של ז'אנרים.
+                            </p>
+                            <p style="font-size: 18px; line-height: 1.6; color: #555;">
+                                שיר-בוט הוא אתר שמכיל מגוון עצום של סגנונות מוזיקליים. מהלחנים המסורתיים של המוזיקה החסידית ועד לצלילים התוססים של המוזיקה המזרחית. מהקלאסיקה מחממת הלב של פרחי לונדון ובן-ציון שנקר, ועד לצלילים החדשניים של מוזיקה אלטרנטיבית, הכל במקום אחד.
+                            </p>
+                            <img src="https://nhlocal.github.io/shir-bot/help/prtscrn.png" alt="תמונת האתר" width="700" style="display: block; margin: 0 auto; max-width: 100%; border: 5px;">
+                            <p style="font-size: 18px; line-height: 1.6; color: #555;">
+                                בין אם אתם במצב רוח של נוסטלגיה או להוטים לגלות את הלהיטים האחרונים, שיר-בוט יספק אותכם. האוסף הנרחב שלנו משתרע על פני תקופות שונות, סגנונות ותרבויות שונות כדי לתת מענה לכל העדפה מוזיקלית.
+                            </p>
+                            <p style="font-size: 18px; line-height: 1.6; color: #555;">
+                                אל תפספסו את ההזדמנות הזו לחקור את עולם המוזיקה המגוון באמצעות שיר-בוט. התחל את המסע המוזיקלי שלך עכשיו.
+                            </p>
+                            <!-- Add a button to visit the website -->
+                            <p style="margin-top: 20px;">
+                                <a href="https://nhlocal.github.io/shir-bot/register?sourcemail=${userMail}" style="display: inline-block; background-color: #5D3AB0; color: #fff; padding: 10px 20px; font-size: 20px; border-radius: 5px; text-decoration: none; transition: background-color 0.3s ease, transform 0.3s ease, box-shadow 0.3s ease;">בקר באתר</a>
+                            </p>
+                        </td>
+                    </tr>
+                </table>
+            </td>
+        </tr>
+    </table>
+</body>
+</html>
+
+
+
+
+
+
+
+
   `;
 
   // Create a temporary element to hold the HTML content
