--- a/register.html
+++ b/register.html
@@ -133,34 +133,39 @@ function copyFormattedText() {
     <meta charset="UTF-8">
 </head>
 <body style="background-color: #ffffcc; direction: rtl;">
-    <table role="presentation" cellspacing="0" cellpadding="0" border="0" width="100%" style="width: 1000px; margin: auto;">
+    <table role="presentation" cellspacing="0" cellpadding="0" border="0" width="100%" style="width: 900px; margin: auto;">
         <tr>
             <td>
-                <table role="presentation" align="center" cellspacing="0" cellpadding="0" border="0" width="100%" style="background-color: #fff; max-width: 700px; margin: auto; border-radius: 5px; box-shadow: 0 2px 5px rgba(0, 0, 0, 0.2);">
+                <table role="presentation" align="center" cellspacing="0" cellpadding="0" border="0" width="100%" style="background-color: #fff; max-width: 650px; margin: auto; border-radius: 5px; box-shadow: 0 2px 5px rgba(0, 0, 0, 0.2);">
                     <tr>
                         <td style="text-align: center;">
                             <img src="https://nhlocal.github.io/shir-bot/help/title.png" alt="תמונת האתר" width="700" style="display: block; margin: 0 auto; max-width: 100%; border: 5px;">
-                            <h1 style="color: #362266;">שיר-בוט - אתר שירים חסידיים ומזרחיים</h1>
+                            <h2 style="color: #362266;">שיר-בוט - המאגר המוזיקלי הגדול ביותר</h2>
                             <br>
-                            <p style="font-size: 18px; line-height: 1.6; color: #555;">
+                            <p style="font-size: 17px; line-height: 1.6; color: #555;">
                                 יום טוב, יש לנו המלצה עבורכם!
                             </p>
-                            <p style="font-size: 18px; line-height: 1.6; color: #555;">
-                                התכוננו לצלול לעולם המוזיקה כמו שלא היה מעולם עם שיר-בוט. אנחנו היעד האחד שלכם לאוסף מדהים של למעלה מ-70,000 שירים המכסים מגוון רחב של ז'אנרים.
+                            <p style="font-size: 16px; line-height: 1.6; color: #555;">
+                                התכוננו לצלול לעולם המוזיקה כמו שלא עשיתם מעולם. אנחנו היעד האחד שלכם לאוסף מדהים של למעלה מ-70,000 שירים המכסים מגוון רחב של ז'אנרים
                             </p>
-                            <p style="font-size: 18px; line-height: 1.6; color: #555;">
-                                שיר-בוט הוא אתר שמכיל מגוון עצום של סגנונות מוזיקליים. מהלחנים המסורתיים של המוזיקה החסידית ועד לצלילים התוססים של המוזיקה המזרחית. מהקלאסיקה מחממת הלב של פרחי לונדון ובן-ציון שנקר, ועד לצלילים החדשניים של מוזיקה אלטרנטיבית, הכל במקום אחד.
+                            <p style="font-size: 16px; line-height: 1.6; color: #555;">
+                                שיר-בוט הוא אתר המכיל מגוון עצום של סגנונות מוזיקליים. מהלחנים המסורתיים של המוזיקה החסידית ועד לצלילים התוססים של המוזיקה המזרחית. מהקלאסיקה מחממת הלב של פרחי לונדון ובן-ציון שנקר, ועד לצלילים החדשניים של מוזיקה אלטרנטיבית, הכל במקום אחד
                             </p>
                             <img src="https://nhlocal.github.io/shir-bot/help/prtscrn.png" alt="תמונת האתר" width="700" style="display: block; margin: 0 auto; max-width: 100%; border: 5px;">
-                            <p style="font-size: 18px; line-height: 1.6; color: #555;">
-                                בין אם אתם במצב רוח של נוסטלגיה או להוטים לגלות את הלהיטים האחרונים, שיר-בוט יספק אותכם. האוסף הנרחב שלנו משתרע על פני תקופות שונות, סגנונות ותרבויות שונות כדי לתת מענה לכל העדפה מוזיקלית.
+							<br>
+                            <p style="font-size: 16px; line-height: 1.6; color: #555;">
+                                אז בין אם אתם במצב רוח של נוסטלגיה או להוטים לגלות את הלהיטים האחרונים, שיר-בוט יספק אתכם. האוסף הנרחב שלנו משתרע על פני תקופות שונות, סגנונות ותרבויות שונות כדי לתת מענה לכל העדפה מוזיקלית
                             </p>
-                            <p style="font-size: 18px; line-height: 1.6; color: #555;">
-                                אל תפספסו את ההזדמנות הזו לחקור את עולם המוזיקה המגוון באמצעות שיר-בוט. התחל את המסע המוזיקלי שלך עכשיו.
+                            <p style="font-size: 16px; line-height: 1.6; color: #555;">
+                                אל תפספסו את ההזדמנות לחקור את עולם המוזיקה המגוון באמצעות שיר-בוט. התחילו את המסע המוזיקלי שלכם עכשיו!
                             </p>
                             <!-- Add a button to visit the website -->
                             <p style="margin-top: 20px;">
                                 <a href="https://nhlocal.github.io/shir-bot/register?sourcemail=${userMail}" style="display: inline-block; background-color: #5D3AB0; color: #fff; padding: 10px 20px; font-size: 20px; border-radius: 5px; text-decoration: none; transition: background-color 0.3s ease, transform 0.3s ease, box-shadow 0.3s ease;">בקר באתר</a>
+                            </p>
+							<hr>
+                            <p style="font-size: 16px; line-height: 1.6; color: #555;">
+                                מעוניינים להכנס להגרלה על בלה בלה בלה?
                             </p>
                         </td>
                     </tr>
