--- a/register.html
+++ b/register.html
@@ -82,15 +82,16 @@ document.getElementById('instructionsButton').addEventListener('click', function
   var newInstructions = document.createElement('div');
   newInstructions.innerHTML = `
   <div class="refined">
-    <h2>כיצד נכנסים להגרלה</h2>
+    <h2>כיצד נכנסים להגרלה כפול 100?</h2>
 	<p>במספר צעדים פשוטים</p>
     <ol style="list-style-type: none;">
-      <li><a class="refined" href="https://mail.google.com/mail/u/0/?view=cm&fs=1&tf=1&source=mailto&su=%E2%9C%A8+%D7%A8%D7%95%D7%A6%D7%99%D7%9D+%D7%9C%D7%94%D7%95%D7%A8%D7%99%D7%93+%D7%A9%D7%99%D7%A8%D7%99%D7%9D+%D7%91%D7%90%D7%95%D7%A4%D7%9F+%D7%97%D7%95%D7%A4%D7%A9%D7%99+%D7%91%D7%AA%D7%95%D7%9A+%D7%9E%D7%90%D7%92%D7%A8+%D7%A9%D7%9C+70%2C000+%D7%A9%D7%99%D7%A8%D7%99%D7%9D%3F+%D7%9B%D7%93%D7%90%D7%99+%D7%A9%D7%AA%D7%A6%D7%99%D7%A6%D7%95+%D7%A8%D7%92%D7%A2...&to=" target="_blank">לחצו כאן</a> לפתיחת הודעת מייל באופן אוטומטי</li>
-	  <li>הכניסו כאן את כתובת המייל שלכם: <input dir="ltr" type="email" id="usermail" size="20" />
+      <li>⌀ <a class="refined" href="https://mail.google.com/mail/u/0/?view=cm&fs=1&tf=1&source=mailto&su=%E2%9C%A8+%D7%A8%D7%95%D7%A6%D7%99%D7%9D+%D7%9C%D7%94%D7%95%D7%A8%D7%99%D7%93+%D7%A1%D7%99%D7%A0%D7%92%D7%9C%D7%99%D7%9D+%D7%91%D7%90%D7%95%D7%A4%D7%9F+%D7%97%D7%95%D7%A4%D7%A9%D7%99+%D7%9E%D7%AA%D7%95%D7%9A+%D7%9E%D7%90%D7%92%D7%A8+%D7%A9%D7%9C+70%2C000+%D7%A9%D7%99%D7%A8%D7%99%D7%9D%3F+%D7%9B%D7%93%D7%90%D7%99+%D7%A9%D7%AA%D7%A6%D7%99%D7%A6%D7%95+%D7%A8%D7%92%D7%A2...&to=" target="_blank">לחצו כאן</a> לפתיחת הודעת מייל באופן אוטומטי</li>
+	  <p style="font-size: 12px; padding: 0px; margin: 0px">לא עבד? <a class="refined" href="mailto:?subject=%E2%9C%A8+%D7%A8%D7%95%D7%A6%D7%99%D7%9D+%D7%9C%D7%94%D7%95%D7%A8%D7%99%D7%93+%D7%A1%D7%99%D7%A0%D7%92%D7%9C%D7%99%D7%9D+%D7%91%D7%90%D7%95%D7%A4%D7%9F+%D7%97%D7%95%D7%A4%D7%A9%D7%99+%D7%9E%D7%AA%D7%95%D7%9A+%D7%9E%D7%90%D7%92%D7%A8+%D7%A9%D7%9C+70%2C000+%D7%A9%D7%99%D7%A8%D7%99%D7%9D%3F+%D7%9B%D7%93%D7%90%D7%99+%D7%A9%D7%AA%D7%A6%D7%99%D7%A6%D7%95+%D7%A8%D7%92%D7%A2..." target="_blank">לחצו כאן</a></p>
+	  <li>⌀ הכניסו כאן את כתובת המייל שלכם: <input dir="ltr" type="email" id="usermail" size="20" />
 	  <p style="font-size: 12px; padding: 0px; margin: 0px">*הכנסת מייל תקין היא הכרחית כדי שנוכל להכניס אתכם להגרלה!</p></li>
-      <li><a class="refined" onclick="copyFormattedText()">לחצו כאן</a> להעתקת הודעה מוכנה ללוח</li>
-      <li>הדביקו את התוכן בהודעת המייל</li>
-      <li>שלחו לחבריכם</li><br>
+      <li>⌀ <a class="refined" onclick="copyFormattedText()">לחצו כאן</a> להעתקת הודעה מוכנה ללוח</li>
+      <li>⌀ הדביקו את התוכן בהודעת המייל</li>
+      <li>⌀ שלחו לחבריכם</li><br>
     </ol>
 	<b>שימו לב:על כל אדם נוסף שיכנס לאתר דרככם, תכנסו להגרלה פעם נוספת!</b>
   </div>
@@ -136,7 +137,7 @@ function copyFormattedText() {
     <table role="presentation" cellspacing="0" cellpadding="0" border="0" width="100%" style="width: 900px; margin: auto;">
         <tr>
             <td>
-                <table role="presentation" align="center" cellspacing="0" cellpadding="0" border="0" width="100%" style="background-color: #fff; max-width: 650px; margin: auto; border-radius: 5px; box-shadow: 0 2px 5px rgba(0, 0, 0, 0.2);">
+                <table role="presentation" align="center" cellspacing="0" cellpadding="0" border="0" width="100%" style="background-color: #fff; max-width: 650px; margin: auto; border-radius: 5px 5px 0px 0px; box-shadow: 0 2px 5px rgba(0, 0, 0, 0.2);">
                     <tr>
                         <td style="text-align: center;">
                             <img src="https://nhlocal.github.io/shir-bot/help/title.png" alt="תמונת האתר" width="700" style="display: block; margin: 0 auto; max-width: 100%; border: 5px;">
@@ -161,27 +162,28 @@ function copyFormattedText() {
                             </p>
                             <!-- Add a button to visit the website -->
                             <p style="margin-top: 20px;">
-                                <a href="https://nhlocal.github.io/shir-bot/register?sourcemail=${userMail}" style="display: inline-block; background-color: #5D3AB0; color: #fff; padding: 10px 20px; font-size: 20px; border-radius: 5px; text-decoration: none; transition: background-color 0.3s ease, transform 0.3s ease, box-shadow 0.3s ease;">בקר באתר</a>
+                                <a href="https://nhlocal.github.io/shir-bot/register?sourcemail=${userMail}" style="display: inline-block; background-color: #5D3AB0; color: #fff; padding: 10px 20px; font-size: 20px; border-radius: 5px; text-decoration: none; transition: background-color 0.3s ease, transform 0.3s ease, box-shadow 0.3s ease;">בקרו באתר</a>
                             </p>
-							<hr>
-                            <p style="font-size: 16px; line-height: 1.6; color: #555;">
-                                מעוניינים להכנס להגרלה על בלה בלה בלה?
-                            </p>
-                        </td>
                     </tr>
                 </table>
+                <table role="presentation" align="center" cellspacing="0" cellpadding="0" border="0" width="100%" style="background-color: #D7C0FF; max-width: 650px; margin: auto; border-radius: 0px 0px 5px 5px; box-shadow: 0 2px 5px rgba(0, 0, 0, 0.2);">
+                    <tr>
+                        <td style="text-align: center;">
+                            <b style="font-size: 16px; line-height: 1.6; color: #555;">
+                                מעוניינים להיכנס להגרלה על מנוי לשנה למאגר המוזיקלי בדרייב<br>מאגר המכיל 500 גי'גה של מוזיקה, סיפורים והרצאות?<br>
+                                <a href="https://nhlocal.github.io/shir-bot/register?sourcemail=${userMail}" style="margin-top: 8px; display: inline-block; background-color: white; color: #5D3AB0; padding: 3px; font-size: 16px; border-radius: 5px;">הירשמו כעת!</a>
+                            </b><br><br>
+                            <b style="font-size: 16px; line-height: 1.6; color: #4A2E8C; text-shadow: -1px 0 white, 0 1px white, 1px 0 white, 0 -1px white;">
+                                רוצים להגדיל את סיכויי הזכיה שלכם?<br>היכנסו לקישור לעיל ושימו לב לפרטים!<br>כל משתמש נוסף שיכנס לאתר דרככם<br>יזכה אתכם בכניסה נוספת להגרלה!
+                            </b><br>
+                        </td>
+                    </tr>
+                </table>						
             </td>
         </tr>
     </table>
 </body>
 </html>
-
-
-
-
-
-
-
 
   `;
 
