--- a/register.html
+++ b/register.html
@@ -58,7 +58,7 @@ document.addEventListener("DOMContentLoaded", function() {
 	<p>כדי שאתה וחברך תכנסו להגרלה, יש להירשם כעת</p>
     <iframe src="${iframeSrc}" width="400" height="400" frameborder="0" marginheight="0" marginwidth="0">טוען...</iframe>
 
-	<p>מעוניין להגדיל את סיכויי הזכייה שלך פי 100?<a style="" id="instructionsButton">לחץ כאן כעת להוראות נוספות</a></p>
+	<p><b>מעוניין להגדיל את סיכויי הזכייה שלך פי 100?<a style="" id="instructionsButton">לחץ כאן כעת להוראות נוספות!</a></b></p>
     <br>
 	<a class="confirm-button" href="https://nhlocal.github.io/shir-bot/">לסיום ומעבר לאתר</a>
 </div>
