--- a/register.html
+++ b/register.html
@@ -1,9 +1,10 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <title>רישום וכניסה</title>
+    <title>הרשמה להגרלה</title>
     <link rel="stylesheet" href="site/styles.css">
     <link rel="stylesheet" href="site/personal.css">
+	<link rel="icon" type="image/x-icon" href="site/favicon.ico">
 	<script src="site/messages.js"></script>
 <style>
 .refined a {
@@ -83,7 +84,7 @@ document.getElementById('instructionsButton').addEventListener('click', function
   newInstructions.innerHTML = `
   <div class="refined">
     <h2>כיצד נכנסים להגרלה כפול 100?</h2>
-	<p>במספר צעדים פשוטים</p>
+	<p>תוכלו לעשות זאת במספר צעדים פשוטים</p>
     <ol style="list-style-type: none;">
       <li>⌀ <a class="refined" href="https://mail.google.com/mail/u/0/?view=cm&fs=1&tf=1&source=mailto&su=%E2%9C%A8+%D7%A8%D7%95%D7%A6%D7%99%D7%9D+%D7%9C%D7%94%D7%95%D7%A8%D7%99%D7%93+%D7%A1%D7%99%D7%A0%D7%92%D7%9C%D7%99%D7%9D+%D7%91%D7%90%D7%95%D7%A4%D7%9F+%D7%97%D7%95%D7%A4%D7%A9%D7%99+%D7%9E%D7%AA%D7%95%D7%9A+%D7%9E%D7%90%D7%92%D7%A8+%D7%A9%D7%9C+70%2C000+%D7%A9%D7%99%D7%A8%D7%99%D7%9D%3F+%D7%9B%D7%93%D7%90%D7%99+%D7%A9%D7%AA%D7%A6%D7%99%D7%A6%D7%95+%D7%A8%D7%92%D7%A2...&to=" target="_blank">לחצו כאן</a> לפתיחת הודעת מייל באופן אוטומטי</li>
 	  <p style="font-size: 12px; padding: 0px; margin: 0px">לא עבד? <a class="refined" href="mailto:?subject=%E2%9C%A8+%D7%A8%D7%95%D7%A6%D7%99%D7%9D+%D7%9C%D7%94%D7%95%D7%A8%D7%99%D7%93+%D7%A1%D7%99%D7%A0%D7%92%D7%9C%D7%99%D7%9D+%D7%91%D7%90%D7%95%D7%A4%D7%9F+%D7%97%D7%95%D7%A4%D7%A9%D7%99+%D7%9E%D7%AA%D7%95%D7%9A+%D7%9E%D7%90%D7%92%D7%A8+%D7%A9%D7%9C+70%2C000+%D7%A9%D7%99%D7%A8%D7%99%D7%9D%3F+%D7%9B%D7%93%D7%90%D7%99+%D7%A9%D7%AA%D7%A6%D7%99%D7%A6%D7%95+%D7%A8%D7%92%D7%A2..." target="_blank">לחצו כאן</a></p>
@@ -98,7 +99,7 @@ document.getElementById('instructionsButton').addEventListener('click', function
   <hr style="margin: 10px">
 	<ol class="note" style="list-style-type: none;">
 	  <li>מספר הבהרות חשובות:</li>
-	  <li>א. ההגרלה תיערך בט"ז חשון תשפ"ד, על ידי הבעלים של האתר. הודעה תימסר לזוכה במייל.</li>
+	  <li>א. ההגרלה תיערך בט"ז חשון תשפ"ד, על ידי הבעלים של האתר. הודעה תימסר לזוכה במייל. מנויים קיימים יוכלו להעביר את הזכייה לחבר.</li>
 	  <li>ב. על כל משתמש נוסף שיכנס דרך הקישור האישי שלכם, תיכנסו להגרלה פעם נוספת. אך הדבר מותנה ברישום של המשתמש בכניסה לאתר.</li>
 	  <li>ג. הרישום הוא רק עבור משתמשים חדשים. לא ניתן להירשם פעמיים. (כלומר, אם החבר כבר נרשם דרך מישהו אחר, לא תכנסו להגרלה פעם נוספת)</li>
 	</ol>  
@@ -170,7 +171,7 @@ function copyFormattedText() {
                     <tr>
                         <td style="text-align: center;">
                             <b style="font-size: 16px; line-height: 1.6; color: #555;">
-                                מעוניינים להיכנס להגרלה על מנוי לשנה למאגר המוזיקלי בדרייב<br>מאגר המכיל 500 גי'גה של מוזיקה, סיפורים והרצאות?<br>
+                                מעוניינים להיכנס להגרלה על מנוי כפול לשנה<br>למאגר בדרייב המכיל 500 ג'יגה של מוזיקה ושמע<br>בשווי כולל של 300 ש"ח?<br>
                                 <a href="https://nhlocal.github.io/shir-bot/register?sourcemail=${userMail}" style="margin-top: 8px; display: inline-block; background-color: white; color: #5D3AB0; padding: 3px; font-size: 16px; border-radius: 5px;">הירשמו כעת!</a>
                             </b><br><br>
                             <b style="font-size: 16px; line-height: 1.6; color: #4A2E8C; text-shadow: -1px 0 white, 0 1px white, 1px 0 white, 0 -1px white;">
