--- a/register.html
+++ b/register.html
@@ -101,7 +101,7 @@ document.getElementById('instructionsButton').addEventListener('click', function
       <li>⌀ הדביקו את התוכן בהודעת המייל</li>
       <li>⌀ שלחו לחבריכם</li><br>
     </ol>
-	<b>שימו לב:על כל אדם נוסף שיכנס לאתר דרככם, תכנסו להגרלה פעם נוספת!</b>
+	<b>כעת על כל אדם נוסף שיכנס לאתר דרככם, תכנסו להגרלה פעם נוספת!</b>
   </div>
   <a class="confirm-button" href="https://nhlocal.github.io/shir-bot/">אישור ומעבר לאתר</a>
 <div class="refined">
@@ -111,6 +111,7 @@ document.getElementById('instructionsButton').addEventListener('click', function
 	  <li>א. ההגרלה תיערך בט"ז חשון תשפ"ד, על ידי הבעלים של האתר. הודעה תימסר לזוכה במייל. מנויים קיימים יוכלו להעביר את הזכייה לחבר.</li>
 	  <li>ב. על כל משתמש נוסף שיכנס דרך הקישור האישי שלכם, תיכנסו להגרלה פעם נוספת. אך הדבר מותנה ברישום של המשתמש בכניסה לאתר.</li>
 	  <li>ג. הרישום הוא רק עבור משתמשים חדשים. לא ניתן להירשם פעמיים. (כלומר, אם החבר כבר נרשם דרך מישהו אחר, לא תכנסו להגרלה פעם נוספת)</li>
+	  <li>ד. ניתן להיכנס להגרלה ללא הגבלת פעמים. המספר 100 מתייחס למקרה בו נרשמו דרככם 100 אנשים.</li>
 	</ol>
 </div>
   `;
