התאמת מודעות כותרת תחתונה

--- a/index.html
+++ b/index.html
@@ -122,7 +122,7 @@
   </div>
 <!--  גרסת בטא ניסיונית - לתקלות ניתן לשלוח משוב למייל היוצר  -->
   <div class="fixed-bottom">
-    <p>מעוניינים לקבל גישה מלאה למאגר המוזיקלי <b>ב-50% הנחה?</b> <a id="music-in-drive" href="https://forms.gle/couZadvYGJ41hhYs7" target="_blank">הרשמו כאן!</a></p>
+    <p></p>
   </div>
 </div>
 
@@ -173,6 +173,7 @@
 
   <script src="site/new-script.js"></script>
   <script src="site/messages.js"></script>
+  <script src="site/new-web.js"></script>
   
   <script>
 document.addEventListener('DOMContentLoaded', function() {
