--- a/old.html
+++ b/old.html
@@ -120,7 +120,7 @@
   </div>
 <!-- בשימוש במערכת אתם מאשרים את השימוש בכתובת המייל שלכם -->
 	<div class="fixed-bottom">
-		<p>מעוניינים לקבל גישה מלאה למאגר המוזיקלי <b>ב-50% הנחה?</b> <a style="" id="music-in-drive" href="https://forms.gle/couZadvYGJ41hhYs7" target="_blank">הרשמו כאן!</a></p>
+		<p>זוהי המערכת הישנה - השירים ישלחו לכתובת המייל שלכם</p>
 	  </div>
 	</div>
 
