--- a/register.html
+++ b/register.html
@@ -131,7 +131,7 @@ document.getElementById('instructionsButton').addEventListener('click', function
   <a class="confirm-button" href="https://nhlocal.github.io/shir-bot/">אישור ומעבר לאתר</a><br><br>
   <p Style="font-size: 14px">הסתבכם? רוצים לשלוח גם בפלטפורמות אחרות? העתיקו את הקישור האוטומטי שלכם ושלחו לחבריכם בכל דרך שתרצו!</p>
 <div dir="ltr" class="copy-container">
-  <input type="text" size="20" dir="ltr" id="text1" value="https://nhlocal.github.io/shir-bot/register?sourcemail=" readonly>
+  <input type="text" size="20" dir="ltr" id="text1" value="https://nhlocal.github.io/shir-bot/register?sourcemail=" readonly> +
   <input id="text2" size="15" dir="ltr" type="email" placeholder="address@gmail.com">
   <button id="copy-button" onclick="copyToClipboard()">העתק</button>
 </div>
